--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>
-<head>
-<title>This is my demo website</title>
-</head>
-<body>
-<h1>Hello world</h1>
-</body>
-</html>
+<p>this is new text</p>
